@@ -35,8 +35,8 @@ import javax.annotation.Nullable;
  * import com.pulumi.auth0.UserArgs;
  * import com.pulumi.auth0.UserPermission;
  * import com.pulumi.auth0.UserPermissionArgs;
- * import java.util.List;
  * import java.util.ArrayList;
+ * import java.util.Arrays;
  * import java.util.Map;
  * import java.io.File;
  * import java.nio.file.Files;
@@ -51,7 +51,7 @@ import javax.annotation.Nullable;
  *         var resourceServer = new ResourceServer("resourceServer", ResourceServerArgs.builder()
  *             .name("Example Resource Server (Managed by Terraform)")
  *             .identifier("https://api.example.com")
- *             .scopes(List.of(            
+ *             .scopes(Arrays.asList(            
  *                 Map.ofEntries(
  *                     Map.entry("value", "create:foo"),
  *                     Map.entry("description", "Create foos")
